# au

./: .pylintrc  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.archive/: gh_classroom_types.py  gh_classroom_util.py  gh_commit_all.py  gh_gen_feedback.py  gh_gen_grades_csv.py  gh_quick_grade.py  gh_rename_roster.py  gh_run_tests.py  gh_util.py  pytest_data.py  pytest_reporter.py  terminal_util.py
.github/workflows/: ci.yml  docs.yml
_assets/: extra.css
au/: cli.py
au/classroom/: cli.py  clone_submissions.py  commit_all.py  late_submissions.py  rename_roster.py
au/python/: cli.py  eval_assignment.py  gen_feedback.py  gen_grades_csv.py  pytest_data.py  pytest_reporter.py  quick_grade.py  scoring.py
au/sql/: cli.py
best-practices/: index.html
best-practices/codespaces/: index.html
best-practices/python/: index.html
best-practices/sql/: index.html
docs/: README.md  index.md  install.md
docs/references/: cli.md  index.md
docs/tips/: index.md
docs/workflows/: common.md  index.md  python.md  sql.md
install/: index.html
references/: index.html
references/cli/: index.html
search/: search_index.json
src/: csv_dir_map.py  datetime_util.py  gh_classroom_types.py  gh_classroom_util.py  gh_quick_grade.py  gh_run_tests.py  pytest_data.py  pytest_reporter.py  terminal_util.py
src/au/: SettingsBase.py
src/au/classroom/: AssignmentSettings.py  ClassroomSettings.py  Roster.py  __init__.py  classroom_api.py  classroom_types.py  gh.py
src/au/cli/: cli.py
src/au/cli/assignment/: cli.py  clone_all.py  commit_all.py  rename_roster.py  time_details.py
src/au/cli/classroom/: __init__.py  cli.py  clone_all.py  clone_submissions.py  commit_all.py  late_submissions.py  rename_roster.py  time_details.py
src/au/cli/python/: cli.py  eval_assignment.py  pytest_data.py  (+5 more)
src/au/click/: AliasedGroup.py  AssignmentOptions.py  BasePathType.py  DebugOptions.py  RosterOptions.py  SubdirGroup.py
src/au/common/: __init__.py  csv.py  datetime.py  drawing.py  terminal.py
src/au/tools/: __init__.py  csv.py  datetime.py  drawing.py  terminal.py
src/f_table/: BoxChars.py  __init__.py  f_table.py
src/git_wrap/: git_repo.py
src/simple_git/: git_repo.py
tests/: __init__.py  f_table_tests.py  terminal_tests.py
tips/: index.html
workflows/: index.html
workflows/common/: index.html
workflows/python/: index.html
workflows/sql/: index.html
(+8 files in other folders)
