[project]
name = "au-tools"
version = "0.1.6"
description = "au - GitHub Classroom Automation Tools"
authors = [{ name = "Paul York", email = "paul@yorkfamily.com" }]
requires-python = ">=3.12,<4.0"
readme = "README.md"
license = "MIT"
keywords = [
    "github",
    "classroom",
    "autograde",
    "automation",
    "codespaces"
]
dependencies = [
    "pytest (>=8.3.4,<9.0.0)",
    "pytest-subtests (>=0.14.1,<0.15.0)",
    "pylint (>=3.3.4,<4.0.0)",
    "click (>=8.1.8,<9.0.0)",
    "dacite (>=1.9.2,<2.0.0)",
    "tomlkit (>=0.13.2,<0.14.0)",
    "rich (>=13.9.4,<14.0.0)",
    "pytest-timeout (>=2.3.1,<3.0.0)",
    "craftable",
    "git-wrap",
    "getrich",
    "sqlglot>=27.29.0",
    "regex>=2025.11.3",
    "mariadb>=1.1.14",
    "psycopg2-binary>=2.9.10",
    "mssql-python>=0.13.1",
    "docker>=7.1.0",
]

[project.urls]
homepage = "https://ptyork.github.io/au"
repository = "https://github.com/ptyork/au"
"Bug Tracker" = "https://github.com/ptyork/au/issues"

[project.scripts]
au = "au.cli:main"
au-tools = "au.cli:main"

[dependency-groups]
dev = [
    "ruff>=0.14.8",
]
docs = [
    "mkdocs-material>=9.6.7,<10",
    "mkdocs-click>=0.8.1,<0.9",
]

[tool.uv]
default-groups = ["docs"]

[tool.uv.sources]
craftable = { path = "../craftable", editable = true }
git-wrap = { path = "../git_wrap", editable = true }
getrich = { path = "../getrich", editable = true }

[tool.hatch.build.targets.sdist]
include = [
    "src/au",
]

[tool.hatch.build.targets.wheel]
include = [
    "src/au",
]

[tool.hatch.build.targets.wheel.sources]
"src/au" = "au"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
